--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "body-parser": "^1.19.0",
         "cheerio": "^1.0.0-rc.3",
         "express": "^4.17.1",
+        "netlify-lambda": "^2.0.1",
         "node-fetch": "^2.6.0",
         "node-html-parser": "^1.2.20",
         "request": "^2.88.2"
